external/lmgc90_dev-fortran_lib/src/ChiPy/shared/wrap_overall.h

  
/*
Time evolution policy
*/

/**
 * @fn void overall_Initialize(void)
 * @brief Initialize LMGC90
 *
 * @cond PYDOC
 * python usage : overall_Initialize()
 * @endcond
 */
 extern "C" void overall_Initialize(void);
/**
 * @fn void overall_Finalize(void)
 * @brief Finalize LMGC90
 *
 * @cond PYDOC
 * python usage : overall_Finalize()
 * @endcond
 */
 extern "C" void overall_Finalize(void);
/**
 * @fn void overall_InitEntityList(void)
 * @brief Initialize entity list : must be done after LoadTactors
 *
 * @cond PYDOC
 * python usage : overall_InitEntityList()
 * @endcond
 */
 extern "C" void overall_InitEntityList(void);
/**
 * @fn void NewtonRaphson_SetMaxTimeStep(double value)
 * @brief Set value of the maximum possible time step
 *
 * @cond PYDOC
 * python usage : NewtonRaphson_SetMaxTimeStep(dt)
 * @param[in] dt (double) : maximum value of time step
 * @endcond
 *
 * \n Needed only if adaptive time step feature is used\n 
 *
 * @cond CDOC
 * @param[in] value (double) : maximum value of time step
 * @endcond
 */
 extern "C" void NewtonRaphson_SetMaxTimeStep(double value);
/**
 * @fn void NewtonRaphson_SetFinalTime(double value)
 * @brief Set final time
 *
 * @cond PYDOC
 * python usage : NewtonRaphson_SetFinalTime(t_final)
 * @param[in] t_final (double) : final time
 * @endcond
 *
 * @cond CDOC
 * @param[in] value (double) : final time
 * @endcond
 */
 extern "C" void NewtonRaphson_SetFinalTime(double value);
/**
 * @fn void NewtonRaphson_SetMaxIter(int ivalue)
 * @brief Max number of iterations - default is 50
 *
 * @cond PYDOC
 * python usage : NewtonRaphson_SetMaxIter(max_iter)
 * @param[in] max_iter (integer) : 
 * @endcond
 *
 * @cond CDOC
 * @param[in] value (int) : 
 * @endcond
 */
 extern "C" void NewtonRaphson_SetMaxIter(int ivalue);
/**
 * @fn void NewtonRaphson_SetGoodIter(int value)
 * @brief Set the max number of iterations for good convergence - default is 10 
 *
 * @cond PYDOC
 * python usage : NewtonRaphson_SetGoodIter(good_iter)
 * @param[in] good_iter (integer) : 
 * @endcond
 *
 * @cond CDOC
 * @param[in] value (int) : 
 * @endcond
 */
 extern "C" void NewtonRaphson_SetGoodIter(int ivalue);
/**
 * @fn void NewtonRaphson_SetBadIter(int value)
 * @brief Set the max number of iterations for bad convergence - default is 30 
 *
 * @cond PYDOC
 * python usage : NewtonRaphson_SetBadIter(bad_iter)
 * @param[in] bad_iter (integer) : 
 * @endcond
 *
 * @cond CDOC
 * @param[in] value (int) : 
 * @endcond
 */
 extern "C" void NewtonRaphson_SetBadIter(int ivalue);
/**
 * @fn void NewtonRaphson_SetIncPatience(int value)
 * @brief Set the number of increments to adapt the time step when successive good convergence  (increase time step) or bad convergence (decrease time step) - default is 3 
 *
 * @cond PYDOC
 * python usage : NewtonRaphson_SetIncPatience(patience)
 * @param[in] patience (integer) : 
 * @endcond
 *
 * @cond CDOC
 * @param[in] value (int) : 
 * @endcond
 */
 extern "C" void NewtonRaphson_SetIncPatience(int ivalue);
/*
Contact detection
*/

/**
 * @fn void overall_SelectProxTactors(int Nstep_rough_seek=1)
 * @brief Prepare contact detection
 *
 * @cond PYDOC
 * python usage : overall_SelectProxTactors(Nstep_rough_seek)
 * @param[in] Nstep_rough_seek (integer) : periodicity of rough detection
 * @endcond
 *
 * @cond CDOC
 * @param[in] Nstep_rough_seek (int) : periodicity of rough detection
 * @endcond
 */
 extern "C" void overall_SelectProxTactors(int Nstep_rough_seek=1);
/**
 * @fn void overall_DisplayProxTactors(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_DisplayProxTactors()
 * @endcond
 */
 extern "C" void overall_DisplayProxTactors(void);
/**
 * @fn void overall_DIME(int idim, int imod)
 * @brief set space dimension and in 2D the modelling assumption
 *
 * @cond PYDOC
 * python usage : overall_DIME(idim, imod)
 * @param[in] idim (integer) : dimension (2 or 3)
 * @param[in] imod (integer) : kind of model (2D only)
 * @endcond
 *
 * - imod = 1 => plane strain 
 * - imod = 2 => plane stress 
 * - imod = 3 => axisymmetric 
 *
 * @cond CDOC
 * @param[in] idim (int) : dimension (2 or 3)
 * @param[in] imod (int) : mod of analysis (2D only)
 * @endcond
 */
 extern "C" void overall_DIME(int idim, int imod);
/*
Integrator policy
*/

/**
 * @fn void Integrator_InitTheta(double value)
 * @brief
 *
 * @cond PYDOC
 * python usage : Integrator_InitTheta(theta)
 * @param[in] theta (double) : value of theta in integrator
 * @endcond
 *
 * @cond CDOC
 * @param[in] value (double) : value of theta in integrator
 * @endcond
 */
 extern "C" void Integrator_InitTheta(double value);
/**
 * @fn void Integrator_InitQS(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : Integrator_InitQS()
 * @endcond
 *
 * @cond CDOC
 * @endcond
 */
 extern "C" void Integrator_InitQS(void);
/**
 * @fn void Integrator_InitCrankNickolson(double value)
 * @brief
 *
 * @cond PYDOC
 * python usage : Integrator_InitCrankNickolson(theta)
 * @param[in] theta (double) : value of theta in integrator
 * @endcond
 *
 * @cond CDOC
 * @param[in] value (double) : value of theta in integrator
 * @endcond
 */
 extern "C" void Integrator_InitCrankNickolson(double value);
/**
 * @fn void Integrator_InitGear(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : Integrator_InitGear()
 * @endcond
 */
 extern "C" void Integrator_InitGear(void);
/**
 * @fn void Integrator_InitVerlet(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : Integrator_InitVerlet()
 * @endcond
 */
 extern "C" void Integrator_InitVerlet(void);
 
 /**
 * @fn void Integrator_InitBeta2(double value)
 * @brief
 *
 * @cond PYDOC
 * python usage : Integrator_InitBeta2(value)
 * @param[in] value (double)  : numeric diffusion ([0.5,1] and 0.5 is conservative)
 * @endcond
 *
 * @cond CDOC
 * @param[in] alpha_b (double) : numeric diffusion ([0.5,1] and 0.5 is conservative) 
 * @endcond

 */
 extern "C" void Integrator_InitBeta2(double value);
/**
 * @fn void Integrator_SetContactDetectionConfiguration(double alpha_b, double alpha_e)
 * @brief set the parameters necessary to define the contact detection configuration (default: 1-theta, 0.)
 *
 * @cond PYDOC
 * python usage : Integrator_SetContactDetectionConfiguration(alpha_b,alpha_e)
 * @param[in] alpha_b (double) : value of the V_begin weight
 * @param[in] alpha_e (double) : value of the V weight
 * @endcond
 *
 * @cond CDOC
 * @param[in] alpha_b (double) : value of the V_begin weight
 * @param[in] alpha_e (double) : value of the V weight
 * @endcond
 */
extern "C" void Integrator_SetContactDetectionConfiguration(double alpha_b, double alpha_e);
/**
 * @fn void overall_RequireXxlComputation(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_RequireXxlComputation()
 * @endcond
 */
 extern "C" void overall_RequireXxlComputation(void);
/**
 * @fn void overall_UpdatePostData(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_UpdatePostData()
 * @endcond
 */
 extern "C" void overall_UpdatePostData(void);
   
/**
 * @fn void overall_InitPostData(int ifirst, int ilast)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_InitPostData(ifirst, ilast)
 * @param[in] ifirst (integer) : 
 * @param[in] ilast (integer)  : 
 * @endcond
 *
 * @cond CDOC
 * @param[in] ifirst (int) : 
 * @param[in] ilast (int)  : 
 * @endcond
 */
 extern "C" void overall_InitPostData(int ifirst, int ilast);
/**
 * @fn void overall_SetWorkingDirectory(char * cvalue1)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_SetWorkingDirectory(path)
 * @param[in] path (string) : set path to DATBOX directory
 * @endcond
 *
 * @cond CDOC
 * @param[in] cvalue1 (char *) : set path to DATBOX directory
 * @endcond
 */
 extern "C" void overall_SetWorkingDirectory(char * cvalue1);
/**
 * @fn void overall_GetWorkingDirectory(char**string_out, int* string_size, int* real_size);
 * @brief
 *
 * @cond PYDOC
 * python usage :  path = overall_GetWorkingDirectory()
 *
 * @return path (string) : working directory
 * @endcond
 *
 * @cond CDOC
 * @param[out] string_out (char**) : pointer on string of working directory
 * @param[out] string_size (int*)  : size of string pointed by string_out on C side
 * @param[out] real_size   (int*)  : max size of string pointed by string_out on Fortran side
 * @endcond
 */
 extern "C" void overall_GetWorkingDirectory(char** string_out, int* string_size, int* real_size);
/*
Writes
*/

/**
 * @fn void overall_WriteDrivenDof(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_WriteDrivenDof()
 * @endcond
 */
 extern "C" void overall_WriteDrivenDof(void);
/**
 * @fn void overall_WriteOutDisplayFile(int freq_display=0)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_WriteOutDisplayFile(freq_display)
 * @param[in] freq_display (integer) : periodicity of display write
 * @endcond
 *
 * @cond CDOC
 * @param[in] Nstep_write (int) : periodicity of display write
 * @endcond
 */
 extern "C" void overall_WriteOutDisplayFile(int freq_display=0);
/**
 * @fn void TimeEvolution_ReadIniMpValues(int num=0)
 * @brief Read header of a MP_VALUES file
 *
 * @cond PYDOC
 * python usage : TimeEvolution_ReadIniMpValues(num=0)
 * @param[in] num (integer) : num of file to read
 * @endcond
 *
 * @cond CDOC
 * @param[in] num (int) : num of a file to read
 * @endcond
 *
 */
 extern "C" void TimeEvolution_ReadIniMpValues(int num=0);
/**
 * @fn void TimeEvolution_WriteOutMpValues(int nstep=1)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteOutMpValues(nstep)
 * @param[in] nstep (integer) : a freq of writing
 * @endcond
 *
 * @cond CDOC
 * @param[in] nstep (int) : a freq of writing
 * @endcond
 */
 extern "C" void TimeEvolution_WriteOutMpValues(int entier=1);
/**
 * @fn void TimeEvolution_WriteLastMpValues(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : TimeEvolution_WriteLastMpValues()
 * @endcond
 */
 extern "C" void TimeEvolution_WriteLastMpValues(void);
/**
 * @fn void overall_WriteBodies(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_WriteBodies()
 * @endcond
 */
 extern "C" void overall_WriteBodies(void);
/**
 * @fn void overall_CleanOutBodies(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_CleanOutBodies()
 * @endcond
 */
 extern "C" void overall_CleanOutBodies(void);
/**
 * @fn void overall_RebuildInBodies(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_RebuildInBodies()
 * @endcond
 */
 extern "C" void overall_RebuildInBodies(void);
/**
 * @fn void overall_CleanWriteOutFlags(void)
 * @brief
 *
 * @cond PYDOC
 * python usage : overall_CleanWriteOutFlags()
 * @endcond
 */
 extern "C" void overall_CleanWriteOutFlags(void);
/*
reads
*/


/*
*/

/**
 * @fn void overall_UseExperimentalDev(void)
 * @brief Activate some unstable devs
 *
 * @cond PYDOC
 * python usage : overall_UseExperimentalDev()
 * @endcond
 */
 extern "C" void overall_UseExperimentalDev(void);
/**
 * @fn void overall_UseExternalFem(void)
 * @brief Allow to use the externalFem library instead of lmgc90 Fem lib
 *
 * @cond PYDOC
 * python usage : overall_UseExternalFem()
 * @endcond
 */
 extern "C" void overall_UseExternalFem(void);