src/lmgc90_dev/src/ChiPy/shared/wrap_overall.f90


    SUBROUTINE SetMaxTimeStep(value) bind(c, name='NewtonRaphson_SetMaxTimeStep')
       IMPLICIT NONE 
       REAL(C_DOUBLE), INTENT(IN), VALUE :: value

       CALL set_max_time_step(value)

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE SetFinalTime(value) bind(c, name='NewtonRaphson_SetFinalTime')
       IMPLICIT NONE 
       REAL(C_DOUBLE), INTENT(IN), VALUE :: value

       CALL set_final_time(value)

    END SUBROUTINE

!---------------------------------------------------------------------

!---------------------------------------------------------------------

    SUBROUTINE SetNewtonMaxIter(value) bind(c, name='NewtonRaphson_SetMaxIter')
       IMPLICIT NONE 
       INTEGER(C_INT), INTENT(IN), VALUE :: value

       ! un entier ou un reel ?
       CALL set_newton_maxloop(value)       

    END SUBROUTINE
!---------------------------------------------------------------------

    SUBROUTINE SetNewtonGoodIter(value) bind(c, name='NewtonRaphson_SetGoodIter')
       IMPLICIT NONE 
       INTEGER(C_INT), INTENT(IN), VALUE :: value

       ! un entier ou un reel ?
       CALL set_newton_goodloop(value)

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE SetNewtonBadIter(value) bind(c, name='NewtonRaphson_SetBadIter')
       IMPLICIT NONE 
       INTEGER(C_INT), INTENT(IN), VALUE :: value

       ! un entier ou un reel ?
       CALL set_newton_badloop(value)

    END SUBROUTINE
!---------------------------------------------------------------------

    SUBROUTINE SetNewtonIncPatience(value) bind(c, name='NewtonRaphson_SetIncPatience')
       IMPLICIT NONE 
       INTEGER(C_INT), INTENT(IN), VALUE :: value

       CALL set_newton_rate_step(value) 

    END SUBROUTINE

!---------------------------------------------------------------------
! initialisation modelisation
!---------------------------------------------------------------------
    SUBROUTINE DIME(idim,imod) bind(c, name='overall_DIME')
       IMPLICIT NONE 
       INTEGER(C_INT), INTENT(IN), VALUE :: idim
       INTEGER(C_INT), INTENT(IN), VALUE :: imod
       CHARACTER(LEN=10) :: chaine10

       if (idim == 3) then 

                    !1234567890
         chaine10 = '3D        '

       else if (idim == 2) then

         if ( imod == 1) then 
         
                      !1234567890
           chaine10 = '2D PSTRAIN'

         else if ( imod == 2) then 

                      !1234567890
           chaine10 = '2D PSTRESS'

         else if ( imod == 3) then 

                      !1234567890
           chaine10 = '2D AXI    '

         else

           print*,'ERROR: Unsupported dimension' 
           stop

         endif

       else

         print*,'ERROR: Unsupported dimension' 
         stop

       endif

       CALL init_dimension(chaine10)

    END SUBROUTINE

!---------------------------------------------------------------------
!---------------------------------------------------------------------
! initialisation integrateurs
!---------------------------------------------------------------------

    SUBROUTINE InitThetaIntegrator(value) bind(c, name='Integrator_InitTheta')
       IMPLICIT NONE 
       REAL(C_DOUBLE), INTENT(IN), VALUE :: value

       CALL init_theta_integrator(value)       

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE InitQSIntegrator() bind(c, name='Integrator_InitQS')
       IMPLICIT NONE 

       CALL init_qs_integrator()       

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE InitCrankNickolsonIntegrator(value) bind(c, name='Integrator_InitCrankNickolson')
       IMPLICIT NONE 
       REAL(C_DOUBLE), INTENT(IN), VALUE :: value

       CALL init_CN_integrator(value)

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE InitGearIntegrator() bind(c, name='Integrator_InitGear')
       IMPLICIT NONE 

       CALL init_gear_integrator

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE InitVerletIntegrator() bind(c, name='Integrator_InitVerlet')
       IMPLICIT NONE 

       CALL init_verlet_integrator

    END SUBROUTINE
    
 !---------------------------------------------------------------------

    SUBROUTINE InitBeta2Integrator(value) bind(c, name='Integrator_InitBeta2')
       IMPLICIT NONE 
       REAL(C_DOUBLE) , INTENT(IN), VALUE :: value

       CALL init_beta2_integrator(value)

    END SUBROUTINE   

!---------------------------------------------------------------------

    SUBROUTINE SetContactDetectionConfiguration(alpha_b,alpha_e) bind(c, name='Integrator_SetContactDetectionConfiguration')
       IMPLICIT NONE 
       REAL(C_DOUBLE), INTENT(IN), VALUE :: alpha_b,alpha_e

       CALL Set_Contact_Detection_Configuration(alpha_b,alpha_e)       

    END SUBROUTINE


!---------------------------------------------------------------------
!
!---------------------------------------------------------------------

    SUBROUTINE RequireXxlComputation() bind(c, name='overall_RequireXxlComputation')
       IMPLICIT NONE 

       CALL acti_large_computation

    END SUBROUTINE

!---------------------------------------------------------------------

    subroutine UseExperimentalDev() bind(c, name='overall_UseExperimentalDev')
      !! PURPOSE
      !!   activate some unstable devs
      implicit none

      call set_with_experimental_dev

    end subroutine

!---------------------------------------------------------------------

    subroutine UseExternalFem() bind(c, name='overall_UseExternalFem')
      !! PURPOSE
      !!   allow to use the externalFem library instead of lmgc90 Fem lib
      implicit none

      call set_is_externalFEM

    end subroutine

!---------------------------------------------------------------------


!---------------------------------------------------------------------
! detection de contact
!---------------------------------------------------------------------

    SUBROUTINE SelectProxTactors(Nstep_rough_seek) bind(c, name='overall_SelectProxTactors')
       !! PURPOSE
       !!  Prepare contact detection
       IMPLICIT NONE
       INTEGER(C_INT), INTENT(IN), VALUE :: Nstep_rough_seek

       ! needed... even if initialized !!!
       call init_entitylist()

       CALL set_run_contactor(Nstep_rough_seek)

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE DisplayProxTactors() bind(c, name='overall_DisplayProxTactors')
       IMPLICIT NONE

       CALL display_prox_tactors_Ol

    END SUBROUTINE


!---------------------------------------------------------------------
! ou on travaille
!---------------------------------------------------------------------

    SUBROUTINE SetWorkingDirectory(cvalue1) bind(c, name='overall_SetWorkingDirectory')
      implicit none
      character(C_CHAR), dimension(*) :: cvalue1
      !
      character(len=256) :: cvalue1_f
      integer :: i

      cvalue1_f = ''
      do i=1,len(cvalue1_f)
          if( cvalue1(i) == c_null_char ) exit
          cvalue1_f = cvalue1_f(1:i-1) // cvalue1(i)
      end do

      call Set_Working_Directory(cvalue1_f(1:i))

    END SUBROUTINE

!---------------------------------------------------------------------

    subroutine GetWorkingDirectory(string_out, string_size, real_size) bind(c, name='overall_GetWorkingDirectory')
      implicit none
      type(c_ptr) :: string_out
      integer(c_int), intent(out) :: string_size, real_size
      !
      character(len=256), pointer :: working_dir
      character(c_char) , pointer :: gniii

      allocate(working_dir)
      working_dir = location('')

      string_size = len(trim(working_dir))
      real_size   = len(working_dir)

      gniii => working_dir(1:1)
      string_out = c_loc(gniii)

    end subroutine

!---------------------------------------------------------------------
! write des entetes
!---------------------------------------------------------------------


!---------------------------------------------------------------------

    SUBROUTINE WriteDrivenDof() bind(c, name='overall_WriteDrivenDof')
       IMPLICIT NONE

       CALL write_out_driven_dof_Ol

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE WriteBodies() bind(c, name='overall_WriteBodies')
       IMPLICIT NONE 

       CALL write_out_bodies_ol

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE WriteOutDisplayFile(freq_display) bind(c, name='overall_WriteOutDisplayFile')
       IMPLICIT NONE 
       INTEGER(C_INT), INTENT(IN), VALUE:: freq_display

       call faterr('overall_WriteOutDisplayFile','Obsolete function : please python WriteDisplayFile instead with vtk python module')

     END SUBROUTINE

!---------------------------------------------------------------------

    subroutine ReadIniMpValues(num) bind(c, name='TimeEvolution_ReadIniMpValues')
       implicit none 
       integer(c_int), intent(in), value :: num

       call read_in_mp_values_ol(num)

    end subroutine

    SUBROUTINE WriteOutMpValues(Nstep_writeMpv) bind(c, name='TimeEvolution_WriteOutMpValues')
       IMPLICIT NONE 
       INTEGER(C_INT), INTENT(IN), VALUE :: Nstep_writeMpv
       INTEGER :: NSTEP

       NSTEP = get_NSTEP()
       IF (MODULO(Nstep,Nstep_writeMpv) /= 0) RETURN

       call write_xxx_mp_values_Ol(1)

    END SUBROUTINE

    subroutine WriteLastMpValues() bind(c, name='TimeEvolution_WriteLastMpValues')
       implicit none

       call write_xxx_mp_values_Ol(2)

    end subroutine

!---------------------------------------------------------------------

    SUBROUTINE CleanWriteOutFlags() bind(c, name='overall_CleanWriteOutFlags')
      implicit none

      call Clean_writing_flags

    END SUBROUTINE


!---------------------------------------------------------------------
! lecture des entetes
!---------------------------------------------------------------------

    SUBROUTINE CleanOutBodies() bind(c, name='overall_CleanOutBodies')
       IMPLICIT NONE 

       CALL clean_out_bodies

    END SUBROUTINE

!---------------------------------------------------------------------

    SUBROUTINE RebuildInBodies() bind(c, name='overall_RebuildInBodies')
       IMPLICIT NONE 

       CALL clean_in_bodies

    END SUBROUTINE


!%< ----

! obsolete

!
! pour le postraitement post-mortem
!

    SUBROUTINE UpdatePostData() bind(c, name='overall_UpdatePostData')
       IMPLICIT NONE 
       INTEGER :: info

       CALL update_post_data_ol(info)

       IF(info == 0)THEN
          print*,'LAST FILE HAVE BEEN READ'
          print*,'POST PROCESSING IS OVER'
          STOP
       END IF

    END SUBROUTINE

!---------------------------------------------------------------------
   
    SUBROUTINE InitPostData(ifirst,ilast) bind(c, name='overall_InitPostData')
       IMPLICIT NONE 
       INTEGER(C_INT), INTENT(IN), VALUE :: ifirst,ilast

       CALL init_post_data_ol(ifirst,ilast)

    END SUBROUTINE

!---------------------------------------------------------------------

     subroutine Initialize() bind(c, name='overall_Initialize')
       use LMGC90_MPI
       implicit none

       call init_MPI
       call start_MPI_time

     end subroutine

     subroutine Finalize() bind(c, name='overall_Finalize')
       use LMGC90_MPI
       implicit none

       call stop_MPI_time
       call mpi_finalize_process

       call overall_clean_memory

     end subroutine

     function isMPI() bind(c, name='overall_IsMPI')
       use LMGC90_MPI
       implicit none
       integer(kind=c_int) :: isMPI

       isMPI = 0
       if( with_MPI ) isMPI = 1

     end function

     subroutine InitEntityList() bind(c, name='overall_InitEntityList')
       implicit none
